--- a/ArcitechForApp/Info.plist
+++ b/ArcitechForApp/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Access Current Location in App</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Access Current Location in App</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
